fix: add border radius to individual elements since Safari isn't playing well with overflow-hidden

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -260,6 +260,16 @@ how to remove the virtical space around the range input in IE */
   @apply bg-easing-r-song-fade-white absolute top-0 right-0 w-8 h-full;
 }
 
+.pseudo-rounded-t::before,
+.pseudo-rounded-t::after {
+  @apply rounded-t-lg;
+}
+
+.pseudo-rounded-b::before,
+.pseudo-rounded-b::after {
+  @apply rounded-b-lg;
+}
+
 .play-history {
   background: linear-gradient(180deg, #8ec5fc 0%, #e0c3fc 100%);
   height: 12rem;
